--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 								<div class="header-right-main-icon">
 									<i class="fas fa-phone-volume"></i>
 								</div>
-								<div class="header-right-main-icon-content">
+								<div class="header-right-main-icon-content call">
 									<p>Call Us</p>
 									<span>+01776 502 993</span>
 								</div>
@@ -554,11 +554,11 @@
 						</div>
 						<div class="pricing-bottom-content">
 							<ul>
-								<li><a href="#">Unimited Pizza</a></li>
-								<li><a href="#">Daft punk Every Evenings</a></li>
-								<li><a href="#">Full Access Pizza</a></li>
-								<li><a href="#">2 Free Farks Every Months</a></li>
-								<li><a href="#">Unlimited Burger</a></li>
+								<li>Unimited Pizza</li>
+								<li>Daft punk Every Evenings</li>
+								<li>Full Access Pizza</li>
+								<li>2 Free Farks Every Months</li>
+								<li>Unlimited Burger</li>
 							<ul>
 						</div>
 						<div class="pricing-button">
@@ -577,11 +577,11 @@
 						</div>
 						<div class="pricing-bottom-content">
 							<ul>
-								<li><a href="#">Unimited Pizza</a></li>
-								<li><a href="#">Daft punk Every Evenings</a></li>
-								<li><a href="#">Full Access Pizza</a></li>
-								<li><a href="#">2 Free Farks Every Months</a></li>
-								<li><a href="#">Unlimited Burger</a></li>
+								<li>Unimited Pizza</li>
+								<li>Daft punk Every Evenings</li>
+								<li>Full Access Pizza</li>
+								<li>2 Free Farks Every Months</li>
+								<li>Unlimited Burger</li>
 							<ul>
 						</div>
 						<div class="pricing-button">
@@ -600,11 +600,11 @@
 						</div>
 						<div class="pricing-bottom-content">
 							<ul>
-								<li><a href="#">Unimited Pizza</a></li>
-								<li><a href="#">Daft punk Every Evenings</a></li>
-								<li><a href="#">Full Access Pizza</a></li>
-								<li><a href="#">2 Free Farks Every Months</a></li>
-								<li><a href="#">Unlimited Burger</a></li>
+								<li>Unimited Pizza</li>
+								<li>Daft punk Every Evenings</li>
+								<li>Full Access Pizza</li>
+								<li>2 Free Farks Every Months</li>
+								<li>Unlimited Burger</li>
 							<ul>
 						</div>
 						<div class="pricing-button">
@@ -1113,11 +1113,13 @@
 						<div class="footer-nws-icon">
 							<span>Follow us</span>
 							<div class="footer-main-icon">
-								<a href="#"><i class="fab fa-facebook-f"></i></a>
-								<a href="#" class="active"><i class="fab fa-google-plus-g"></i></a>
-								<a href="#"><i class="fab fa-linkedin-in"></i></a>
-								<a href="#"><i class="fab fa-dribbble"></i></a>
-								<a href="#"><i class="fab fa-pinterest-p"></i></a>
+								<ul>
+									<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+									<li><a href="#" class="active"><i class="fab fa-google-plus-g"></i></a></li>
+									<li><a href="#"><i class="fab fa-linkedin-in"></i></a></li>
+									<li><a href="#"><i class="fab fa-dribbble"></i></a></li>
+									<li><a href="#"><i class="fab fa-pinterest-p"></i></a></li>
+								</ul>
 							</div>
 						</div>
 					</div>
